--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 theme: jekyll-theme-cayman
+name: "my-website"
+navbar:
+  title: "My Website"
+  left:
+    - text: "Home"
+      href: index.html
+    - text: "About"
+      href: about.html
